--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,15 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "launch",
+			"name": "Gulp task",
+			"program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
+			"args": [
+				"task"
+			]
+		},
+		{
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
